# rune

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  coll.h  collect.h  main.c  std.c  std.h  str.c  str.h
.github/: codeql-config.yml
.github/workflows/: codeql.yml  coverage.yml
doc/: API_DESIGN.md  ARCHITECTURE.md  BUILD.md  CONVENTIONS.md  TESTING.md  TESTING_INTERNALS.md
docs/: API_DESIGN.md  ARCHITECTURE.md  BUILD.md  DEVELOPMENT.md  TESTING.md  TESTING_INTERNALS.md
src/: coll.h  hash.c  hash.h  main.c  map.c  map.h  r.c  r.h  rbt.h  std.c  std.h  str.c  str.h  tree.h
test/: r_test.h  test.h  test_coll.c  test_hash.c  test_r.c  test_rbt.c  test_str.c  test_tree.c
tool/: README.md
